fix composer issues

--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
     "drupal/dxpr_builder": "^2.0",
     "drupal/entity_browser": "^2.8",
     "drupal/inline_entity_form": "^1.0@RC",
-    "drupal/core": "^10.0.0-beta1",
-    "drush/drush": "^11.1"
+    "drupal/core": "^10.0.0-beta1"
   },
   "require-dev": {
       "drupal/core-dev": "^10",
       "drupal/devel": "^5.0.0",
-      "drush/drush": "^11",
+      "drush/drush": "^11"
   }
 }
