--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
       }
   ],
   "require": {
+    "drupal/default_content": "^2.0.0-alpha2",
     "drupal/dxpr_builder": "^2.0",
     "drupal/entity_browser": "^2.8",
     "drupal/inline_entity_form": "^1.0@RC",
