--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     "drupal/dxpr_builder": "^2.0",
     "drupal/entity_browser": "^2.8",
     "drupal/inline_entity_form": "^1.0@RC",
-    "drupal/core": "^10.0.0-beta1"
+    "drupal/core": "^9"
   },
   "require-dev": {
-      "drupal/core-dev": "^10",
+      "drupal/core-dev": "^9",
       "drupal/devel": "^5.0.0",
       "drush/drush": "^11"
   }
