--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "drupal/dxpr_builder": "^2.0",
     "drupal/entity_browser": "^2.8",
     "drupal/inline_entity_form": "^1.0@RC",
-    "drupal/core": "^10.0.0-beta1"
+    "drupal/core-dev": "^10"
   },
   "require-dev": {
       "drupal/core-dev": "^10",
